Fixed html and css files

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -13,7 +13,6 @@
 </head>
 <body>
 <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
-        <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
         <header>
 
             <!--Logo/website name-->
@@ -27,14 +26,16 @@
                     <a href="#user-dashboard" class="link-black menu-btn">Home</a>
                 </div>
                 <div class="settings-dropdown">
-                    <button type="button" class="blue-btn">Jane Doe
+                    <button type="button" class="blue-btn">Profile
                         <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
                     </button>
+
                     <!-- settings to be shown from dropdown menu -->
                     <div class="settings">
                         <a href="user-account.html" class="link-black">Account Settings</a>
                         <a href="email-settings.html" class="link-black">Email Settings</a>
                     </div>
+
                 </div>
             </div>
 
