--- a/email-settings.html
+++ b/email-settings.html
@@ -15,7 +15,7 @@
             <!--Logo/website name-->
             <div>
                 <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
-            </div>
+            </div>code
 
             <!--container for links to Home and Profile settings-->
             <div class="top-right-menu">
