--- a/add_event.html
+++ b/add_event.html
@@ -7,9 +7,10 @@
     <title>Create event</title>
 
     <link rel="stylesheet" href="add_event.css">
-    <link rel="stylesheet" href="template.css">
-    <link rel="stylesheet" href="user-account.css">
-    <link rel="stylesheet" href="buttons.css">
+    <link rel="stylesheet" href="settings.css"> <!--link to get specific elements for settings pages-->
+    <link rel="stylesheet" href="header.css"> <!--link to get header format-->
+    <link rel="stylesheet" href="buttons.css"> <!--link to get buttons format-->
+    <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
 
     <script src="add_event.js"></script>
 
@@ -19,32 +20,36 @@
    <!-- nav bar -->
 
    <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
-   <header>
+        <header>
 
-    <!--Logo/website name-->
-    <div>
-        <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
-    </div>
-
-    <!--Container for links to Home and Profile settings-->
-    <div class="top-right-menu">
-        <div class="menu-div">
-            <a href="#user-dashboard" class="link-black menu-btn">Home</a>
-        </div>
-        <div class="settings-dropdown">
-            <button type="button" class="blue-btn">Flindy
-                <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
-            </button>
-            <!-- Settings to be shown from dropdown menu -->
-            <div class="settings">
-                <a href="user-account.html" class="link-black">Account Settings</a>
-                <a href="calendar-settings.html" class="link-black">Calendar Settings</a>
+            <!--Logo/website name-->
+            <div>
+                <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
             </div>
-        </div>
-    </div>
 
-</header>
-<hr />
+            <!--container for links to Home and Profile settings-->
+            <div class="top-right-menu">
+                <div class="menu-div">
+                    <a href="#user-dashboard" class="link-black menu-btn">Home</a>
+                </div>
+                <div class="settings-dropdown">
+                    <button type="button" class="blue-btn">Profile
+                        <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
+                    </button>
+
+                    <!-- settings to be shown from dropdown menu -->
+                    <div class="settings">
+                        <a href="user-account.html" class="link-black">Account Settings</a>
+                        <a href="email-settings.html" class="link-black">Email Settings</a>
+                    </div>
+
+                </div>
+            </div>
+
+        </header>
+        <hr />
+
+
     <div id="content-div">
 
     <h1>Create your event</h1>
