--- a/book_event_user.html
+++ b/book_event_user.html
@@ -16,32 +16,35 @@
 <body>
 
 <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
-<header>
+        <header>
 
-    <!--Logo/website name-->
-    <div>
-        <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
-    </div>
-
-    <!--container for links to Home and Profile settings-->
-    <div class="top-right-menu">
-        <div class="menu-div">
-            <a href="#user-dashboard" class="link-black menu-btn">Home</a>
-        </div>
-        <div class="settings-dropdown">
-            <button type="button" class="blue-btn">Flindy
-                <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
-            </button>
-            <!-- settings to be shown from dropdown menu -->
-            <div class="settings">
-                <a href="user-account.html" class="link-black">Account Settings</a>
-                <a href="calendar-settings.html" class="link-black">Calendar Settings</a>
+            <!--Logo/website name-->
+            <div>
+                <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
             </div>
-        </div>
-    </div>
 
-</header>
-<hr>
+            <!--container for links to Home and Profile settings-->
+            <div class="top-right-menu">
+                <div class="menu-div">
+                    <a href="#user-dashboard" class="link-black menu-btn">Home</a>
+                </div>
+                <div class="settings-dropdown">
+                    <button type="button" class="blue-btn">Profile
+                        <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
+                    </button>
+
+                    <!-- settings to be shown from dropdown menu -->
+                    <div class="settings">
+                        <a href="user-account.html" class="link-black">Account Settings</a>
+                        <a href="email-settings.html" class="link-black">Email Settings</a>
+                    </div>
+
+                </div>
+            </div>
+
+        </header>
+        <hr />
+        
 <div id="content">
 
     <h1>Book your event</h1>
