Wed, May 25, 2022, 2:14 AM +00:00

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/Dashboard.css" />
-    <link rel="stylesheet" href="settings.css"> <!--link to get specific elements for settings pages-->
-    <link rel="stylesheet" href="header.css"> <!--link to get header format-->
+    <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
+    <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
     <link rel="stylesheet" href="buttons.css"> <!--link to get buttons format-->
     <title>Dashboard</title>
 </head>
