--- a/public/add_event.html
+++ b/public/add_event.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create event</title>
 
-    <link rel="stylesheet" href="add_event.css">
-    <link rel="stylesheet" href="settings.css"> <!--link to get specific elements for settings pages-->
-    <link rel="stylesheet" href="header.css"> <!--link to get header format-->
-    <link rel="stylesheet" href="buttons.css"> <!--link to get buttons format-->
+    <link rel="stylesheet" href="stylesheets/add_event.css">
+    <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
+    <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
+    <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
     <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
 
     <script src="add_event.js"></script>
