--- a/public/book_event_user.html
+++ b/public/book_event_user.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book your event</title>
 
-    <link rel="stylesheet" href="book_event_user.css">
-    <link rel="stylesheet" href="template.css">
-    <link rel="stylesheet" href="user-account.css">
-    <link rel="stylesheet" href="buttons.css">
+    <link rel="stylesheet" href="stylesheets/book_event_user.css">
+    <link rel="stylesheet" href="stylesheets/template.css">
+    <link rel="stylesheet" href="stylesheets/user-account.css">
+    <link rel="stylesheet" href="stylesheets/buttons.css">
 
     <script src="https://kit.fontawesome.com/2385786b33.js" crossorigin="anonymous"></script>
 </head>
@@ -44,7 +44,7 @@
 
         </header>
         <hr />
-        
+
 <div id="content">
 
     <h1>Book your event</h1>
