--- a/public/email-settings.html
+++ b/public/email-settings.html
@@ -3,9 +3,9 @@
     <head>
         <title>Email Settings</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="settings.css"> <!--link to get settings format-->
-        <link rel="stylesheet" href="header.css"> <!--link to get header format-->
-        <link rel="stylesheet" href="buttons.css">
+        <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get settings format-->
+        <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
+        <link rel="stylesheet" href="stylesheets/buttons.css">
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
     </head>
     <body>
