--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Home</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="homepage.css">
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="buttons.css">
+        <link rel="stylesheet" href="stylesheets/homepage.css">
+        <link rel="stylesheet" href="stylesheets/header.css">
+        <link rel="stylesheet" href="stylesheets/buttons.css">
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
     </head>
     <body>
