--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <title>Login Page</title>
-        <link rel="stylesheet" type="text/css" href="loginPage.css">
+        <link rel="stylesheet" type="text/css" href="stylesheets/loginPage.css">
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
 
     </head>
