--- a/public/searchPage.html
+++ b/public/searchPage.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <title>Search Page</title>
-        <link rel="stylesheet" type="text/css" href="searchPage.css">
+        <link rel="stylesheet" type="text/css" href="stylesheets/searchPage.css">
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
 
 
