--- a/public/user-account.html
+++ b/public/user-account.html
@@ -3,9 +3,9 @@
     <head>
         <title>User Account Settings</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="settings.css"> <!--link to get specific elements for settings pages-->
-        <link rel="stylesheet" href="header.css"> <!--link to get header format-->
-        <link rel="stylesheet" href="buttons.css"> <!--link to get buttons format-->
+        <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
+        <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
+        <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
         <script src="settings.js"></script>
 
