--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="admin-dashboard.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/admin-dashboard.css" />
     <link rel="stylesheet" href="settings.css"> <!--link to get specific elements for settings pages-->
     <link rel="stylesheet" href="header.css"> <!--link to get header format-->
     <link rel="stylesheet" href="buttons.css"> <!--link to get buttons format-->
