Signup page linked with page.js

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -7,6 +7,7 @@
         <title>Sign Up Page</title>
         <link rel="stylesheet" type="text/css" href="stylesheets/signUpPage.css">
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
+        <script src="javascripts/page.js"></script>
 
     </head>
 
@@ -56,7 +57,7 @@
                                     <input id="name3" type="password" placeholder="Password" required>
                                 </div>
                                 <div class="CreateAccount">
-                                    <input type="submit" value="CREATE ACCOUNT!">
+                                    <input type="submit" value="CREATE ACCOUNT!" onclick="signup()">
                                 </div>
                                 <div class="AlreadyAccount">
                                     Already have an account? <a href="loginPage.html">SIGN IN!</a>
