Updated AJAX for signup

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -44,17 +44,17 @@
                     <div class="UserDetails">
                         <span class="or">OR PLEASE FILL IN THE FOLLOWING DETAILS:</span>
                             <div id="fnInput" class="inputs">
-                                <input id="name" type="text" placeholder="First Name" required>
+                                <input name="firstName" type="text" placeholder="First Name" required>
                             </div>
                             <div id="lnInput" class="inputs">
-                                <input id="name1" type="text" placeholder="Last Name" required>
+                                <input name="lastName" type="text" placeholder="Last Name" required>
                             </div>
                             <div class="inputfields2">
                                 <div id="emailInput" class="inputs">
-                                    <input id="name2" type="text" placeholder="Email" required>
+                                    <input name="email" type="text" placeholder="Email" required>
                                 </div>
                                 <div id="passwordInput" class="inputs">
-                                    <input id="name3" type="password" placeholder="Password" required>
+                                    <input name="password" type="password" placeholder="Password" required>
                                 </div>
                                 <div class="CreateAccount">
                                     <input type="submit" value="CREATE ACCOUNT!" onclick="signup()">
