--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -4,9 +4,11 @@
     <head>
 
         <meta charset="UTF-8">
+        <meta name="google-signin-client_id" content="395070286663-kh1dfmb6jjmd5pomdu9q086bns8mkqm5.apps.googleusercontent.com">
         <title>Login Page</title>
         <link rel="stylesheet" type="text/css" href="stylesheets/loginPage.css">
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     </head>
 
