Implemented google sign in - error

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -7,6 +7,7 @@
         <meta name="google-signin-client_id" content="395070286663-kh1dfmb6jjmd5pomdu9q086bns8mkqm5.apps.googleusercontent.com">
         <title>Login Page</title>
         <link rel="stylesheet" type="text/css" href="stylesheets/loginPage.css">
+        <script src="/javascripts/login.js"></script>
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
 
@@ -37,6 +38,8 @@
                             <i class="fa-brands fa-twitter"></i>
                             </a>
                         </div>
+                        <!-- Google sign in button test -->
+                        <div class="g-signin2" data-onsuccess="onSignIn"></div>
                     </div>
 
                     <div class="UserDetails">
