--- a/public/user-account.html
+++ b/public/user-account.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
         <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
-        <script src="settings.js"></script>
+        <script src="/javascripts/settings.js"></script>
 
     </head>
     <body>
