--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/Dashboard.css" />
     <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
     <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
-    <link rel="stylesheet" href="buttons.css"> <!--link to get buttons format-->
+    <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
     <title>Dashboard</title>
 </head>
 <body>
