--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -17,26 +17,26 @@
 
         <!--<script src="https://accounts.google.com/gsi/client" async defer></script>-->
 
-
     </head>
 
     <body>
 
         <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
         <h1 class="LoginToCont"><strong>LOGIN TO CONTINUE</strong></h1>
 
         <div class="LoginRectSection">
-            <span class="socMed">SIGN IN USING SOCIAL MEDIA:</span> <span class="arrow1"> &#x2193;</span>
+            <span class="socMed">SIGN IN:</span><span class="arrow1"> &#x2193;</span>
                 <form action="/example">
                     <div class="socialMedia">
                         <div>
-                            <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn">
-                            <i class="fa-brands fa-google"></i> Login With Google
-                            </a>
+                            <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50"></div>
+                            <!-- onSignIn gives user info -->
+                            <!-- <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn"> -->
+                            <!-- <i class="fa-brands fa-google"></i> Login With Google -->
+                            <!-- </a> -->
                         </div>
-                        <div>
+                        <!-- <div>
                             <a href='https://www.facebook.com/login.php/' class="fb btn">
                             <i class="fa-brands fa-facebook-f"></i>
                             </a>
@@ -45,7 +45,7 @@
                             <a href='https://twitter.com/i/flow/login' class="tw btn">
                             <i class="fa-brands fa-twitter"></i>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="UserDetails">
