Addedd sign out link

--- a/public/user-account.html
+++ b/public/user-account.html
@@ -21,9 +21,9 @@
 
             <!--container for links to Home and Profile settings-->
             <div class="top-right-menu">
-                <div class="menu-div">
+                <!-- <div class="menu-div">
                     <a href="#user-dashboard" class="link-black menu-btn">Home</a>
-                </div>
+                </div> -->
                 <div class="settings-dropdown">
                     <button type="button" class="blue-btn">Profile
                         <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
@@ -35,6 +35,10 @@
                         <a href="email-settings.html" class="link-black">Email Settings</a>
                     </div>
 
+                    <!-- sign out link -->
+                    <div class="menu-div" >
+                        <a href="#" onclick="signOut();" class="link-black menu-btn">Sign out</a>
+                    </div>
                 </div>
             </div>
 
