--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -23,7 +23,7 @@
             <div class="sections">
                 <div class="SignUpRectSection">
             <span class="socMed">SIGN UP USING SOCIAL MEDIA:</span> <span class="arrow1"> &#x2193;</span>
-                <form>
+                <!-- <form> -->
                     <div class="socialMedia">
                         <div>
                             <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn">
@@ -64,7 +64,7 @@
                                 </div>
                             </div>
                         </div>
-                </form>
+                <!-- </form> -->
         </div>
             </div>
         </div>
