Removed form from loginPage

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -29,7 +29,7 @@
 
         <div class="LoginRectSection">
             <span class="socMed">SIGN IN USING SOCIAL MEDIA:</span> <span class="arrow1"> &#x2193;</span>
-                <form action="/example">
+                <!-- <form> -->
                     <div class="socialMedia">
                         <div>
                             <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn">
@@ -58,13 +58,13 @@
                         </div>
 
                         <div class="login">
-                            <button type="submit">LOGIN</button>
+                            <button id="loginButon" type="submit" onclick="login()">LOGIN</button>
                         </div>
                         <div class="NoAccount">
                             Don't have an account? <a href="signUpPage.html">SIGN UP!</a>
                         </div>
                     </div>
-                </form>
+                <!-- </form> -->
         </div>
     </body>
 
