--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -8,15 +8,11 @@
         <meta name="google-signin-plugin_name" content="eventcal">
         <title>Login Page</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
-        <!--<script src="/javascripts/login.js"></script>-->
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
-        <!--link google authentication library-->
-        <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
+
+        <!--for google authentication-->
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script src="/javascripts/login.js"></script>
-
-        <!--<script src="https://accounts.google.com/gsi/client" async defer></script>-->
-
 
     </head>
 
