--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="stylesheets/header.css">
         <link rel="stylesheet" href="stylesheets/buttons.css">
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     </head>
     <body>
 
@@ -24,7 +25,7 @@
                     <a href="signUpPage.html" class="link-black menu-btn">Sign Up</a>
                 </div>
                 <div>
-                    <button type="button" class="blue-btn" onclick="location.href='loginPage.html'" >Log In</button>
+                    <button type="button" class="blue-btn" onclick="window.location.href='loginPage.html'" >Log In</button>
                 </div>
             </div>
 
