--- a/public/add_event.html
+++ b/public/add_event.html
@@ -72,14 +72,12 @@
         </div>
 
         <!-- Enter date of event -->
-        <label for="date" id="label-date">Date:</label><br/>
+        <label for="date" id="label-date">Select a date and time:</label><br/>
         <div id="date-div">
             <input id="date" type="date" ><br/>
         </div>
-
-        <br/>
         <!-- Select time of event -->
-        <label id="label-select-time">Select a time range:</label><br>
+        <!-- <label id="label-select-time">Select a time range:</label><br> -->
         <div class="time-div">
             <div>
                 <label for="from-time"> From: </label>
@@ -90,10 +88,13 @@
                 <input type="time" id="to-time" value="17:00">
             </div>
         </div>
-        <br><br>
+        <br>
+        <button>Add more dates</button>
+
+        <br><br><br>
 
         <!-- Create event -->
-        <input type="submit" value="Create event">
+        <button id="submit-button"> Create event</button>
         <!-- Cancel button -->
         <button id="cancel-button"> Cancel </button>
 
