Tue, Jun 7, 2022, 1:50 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -89,7 +89,7 @@
             </div>
         </div>
         <br>
-        <button>Add more dates</button>
+        <button>Add more times</button>
 
         <br><br><br>
 
