Tue, Jun 7, 2022, 2:17 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -64,7 +64,8 @@
         <!-- Location input -->
         <label id="label-address">Address:</label><br/>
         <div id="div-address">
-            <input id="street" type="text" placeholder="Street"><br/>
+            <input id="street-no" type="text" placeholder="Street number"><br/>
+            <input id="street" type="text" placeholder="Street name"><br/>
             <input id="suburb" type="text" placeholder="Suburb"><br/>
             <input id="state" type="text" placeholder="State"><br/>
             <input id="zip" type="text" placeholder="Zip code"> <br/>
