--- a/public/add_event.html
+++ b/public/add_event.html
@@ -66,9 +66,9 @@
         <div id="div-address">
             <input id="street-no" type="text" placeholder="Street number"><br/>
             <input id="street" type="text" placeholder="Street name"><br/>
-            <input id="suburb" type="text" placeholder="Suburb"><br/>
+            <input id="city" type="text" placeholder="City"><br/>
             <input id="state" type="text" placeholder="State"><br/>
-            <input id="zip" type="text" placeholder="Zip code"> <br/>
+            <input id="post-code" type="text" placeholder="Post code"> <br/>
             <input id="country" type="text" placeholder="Country"><br/>
         </div>
 
