--- a/public/book_event_user.html
+++ b/public/book_event_user.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book your event</title>
 
-    <link rel="stylesheet" href="stylesheets/book_event_user.css">
+    <link rel="stylesheet" href="stylesheets/book_event.css">
     <link rel="stylesheet" href="stylesheets/template.css">
     <link rel="stylesheet" href="stylesheets/user-account.css">
     <link rel="stylesheet" href="stylesheets/buttons.css">
