--- a/public/book_event_user.html
+++ b/public/book_event_user.html
@@ -7,9 +7,9 @@
     <title>Book your event</title>
 
     <link rel="stylesheet" href="stylesheets/book_event.css">
-    <link rel="stylesheet" href="stylesheets/template.css">
-    <link rel="stylesheet" href="stylesheets/user-account.css">
-    <link rel="stylesheet" href="stylesheets/buttons.css">
+    <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
+    <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
+    <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
 
     <script src="https://kit.fontawesome.com/2385786b33.js" crossorigin="anonymous"></script>
 </head>
