Tue, Jun 7, 2022, 3:23 AM +00:00

--- a/public/book_event_nonuser.html
+++ b/public/book_event_nonuser.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book your event</title>
 
-    <link rel="stylesheet" href="stylesheets/book_event_user.css">
+    <link rel="stylesheet" href="stylesheets/book_event.css">
     <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
     <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
     <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
