--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -13,12 +13,8 @@
         <!--for google authentication-->
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script src="/javascripts/login.js"></script>
+        <script src="/javascripts/settings.js"></script>
 
-<<<<<<< HEAD
-        <!--<script src="https://accounts.google.com/gsi/client" async defer></script>-->
-
-=======
->>>>>>> 9055d6919c68afa24af25216d76d1b421aa341bc
     </head>
 
     <body>
@@ -28,13 +24,8 @@
         <h1 class="LoginToCont"><strong>LOGIN TO CONTINUE</strong></h1>
 
         <div class="LoginRectSection">
-<<<<<<< HEAD
             <span class="socMed">SIGN IN:</span><span class="arrow1"> &#x2193;</span>
                 <form action="/example">
-=======
-            <span class="socMed">SIGN IN USING SOCIAL MEDIA:</span> <span class="arrow1"> &#x2193;</span>
-                <!-- <form> -->
->>>>>>> 9055d6919c68afa24af25216d76d1b421aa341bc
                     <div class="socialMedia">
                         <div>
                             <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50"></div>
