Tue, Jun 7, 2022, 3:45 AM +00:00

--- a/public/book_event_user.html
+++ b/public/book_event_user.html
@@ -71,7 +71,7 @@
     </div>
 
     <!-- Submit button -->
-    <input type="submit" value="Submit availability">
+    <button id="submit-button"> Submit availability</button>
     <!-- Cancel button -->
     <button id="cancel-button"> Cancel </button>
 
