--- a/public/book_event_nonuser.html
+++ b/public/book_event_nonuser.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <!-- Submit availability -->
-    <input type="submit" value="Submit availability"/>
+    <button id="submit-button"> Submit availability</button>
     <!-- Cancel button -->
     <button id="cancel-button"> Cancel </button>
 </div>
