Tue, Jun 7, 2022, 3:56 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -92,7 +92,7 @@
         <br><br><br>
 
         <!-- Create event -->
-        <button id="submit-button"> Create event</button>
+        <button onclick="addEvent()" id="submit-button"> Create event</button>
         <!-- Cancel button -->
         <button id="cancel-button"> Cancel </button>
 
