Tue, Jun 7, 2022, 4:07 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
     <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
 
-    <script src="add_event.js"></script>
+    <script src="javascripts/add_event.js"></script>
 
 </head>
 <body>
