Route to get userID

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -24,7 +24,7 @@
 
         <div class="LoginRectSection">
             <span class="socMed">SIGN IN:</span><span class="arrow1"> &#x2193;</span>
-                <form action="/example">
+                <!-- <form action="/example"> -->
                     <div class="socialMedia">
                         <div>
                             <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50"></div>
