Query attempt for event details

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -68,7 +68,7 @@
             </div>
             <br><br>
             <!-- Individual Events -->
-            <div id="events">
+            <div id="events" v-on:click="getEvents()">
                 <div class="event">
                     <div class="dateTime">
                         <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
