--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <title>Guest Details</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
-        <script src="/javascripts/login.js"></script>
+        <script src="/javascripts/pop_up-vue.js"></script>
 
     </head>
 
@@ -16,7 +16,7 @@
 
         <h1></h1>
 
-        
+
     </body>
 
 </html>
