Tue, Jun 7, 2022, 3:37 PM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -5,14 +5,13 @@
 
         <meta charset="UTF-8">
         <title>Guest Details</title>
-        <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
+        <link rel="stylesheet" type="text/css" href="">
         <script src="/javascripts/pop_up-vue.js"></script>
 
     </head>
 
     <body>
 
-        <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
 
         <h1></h1>
 
