Tue, Jun 7, 2022, 3:40 PM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -13,8 +13,13 @@
     <body>
 
 
-        <h1></h1>
+        <h1>Please enter the following details</h1>
 
+        <div>
+
+            
+
+        </div>
 
     </body>
 
