--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -17,7 +17,13 @@
 
         <div>
 
-            
+            <form action="/action_page.php">
+                <label for="fn">First name:</label><br>
+                <input type="text" id="fname" name="fname" value="John"><br>
+                <label for="ln">Last name:</label><br>
+                <input type="text" id="lname" name="lname" value="Doe"><br><br>
+                <input type="submit" value="Submit">
+            </form>
 
         </div>
 
