Tue, Jun 7, 2022, 3:46 PM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -15,10 +15,8 @@
 
         <div>
             <form action="/action_page.php">
-                <label for="fn">First name:</label><br>
-                <input type="text" id="fname" name="fname" value="John"><br>
-                <label for="ln">Last name:</label><br>
-                <input type="text" id="lname" name="lname" value="Doe"><br><br>
+                <input id="fn" type="text" placeholder="First Name"<br>
+                <input id="ln" type="text" placeholder="Last Name"><br><br>
                 <input type="submit" value="Submit">
             </form>
         </div>
