Tue, Jun 7, 2022, 3:48 PM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -14,10 +14,10 @@
         <h1>Please enter the following details</h1>
 
         <div>
-            <form action="/action_page.php">
+            <form action="/">
                 <input id="fn" type="text" placeholder="First Name"<br>
                 <input id="ln" type="text" placeholder="Last Name"><br><br>
-                <input type="submit" value="Submit">
+                <button id="loginButon" type="submit">Submit</button>
             </form>
         </div>
 
