Tue, Jun 7, 2022, 4:02 PM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -14,10 +14,10 @@
         <h1>Please enter the following details</h1>
 
         <div>
-            <form action="/">
+            <form>
                 <input id="fn" type="text" placeholder="First Name"<br>
                 <input id="ln" type="text" placeholder="Last Name"><br><br>
-                <button id="loginButon" type="submit">Submit</button>
+                <button type="submit">Submit</button>
             </form>
         </div>
 
