Tue, Jun 7, 2022, 4:27 PM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -15,8 +15,8 @@
 
         <div>
             <form>
-                <input id="fn" type="text" placeholder="First Name"<br>
-                <input id="ln" type="text" placeholder="Last Name"><br><br>
+                <input id="fn" name=firstName type="text" placeholder="First Name"<br>
+                <input id="ln" name=lastName type="text" placeholder="Last Name"><br><br>
                 <button type="submit">Submit</button>
             </form>
         </div>
