Wed, Jun 8, 2022, 1:17 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -54,7 +54,7 @@
                         </div>
 
                         <div class="login">
-                            <button id="loginButon" type="submit" onclick="login()">LOGIN</button>
+                            <button id="submit-button" type="submit" onclick="login()">LOGIN</button>
                         </div>
                         <div class="NoAccount">
                             Don't have an account? <a href="signUpPage.html">SIGN UP!</a>
