--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -8,6 +8,7 @@
         <meta name="google-signin-plugin_name" content="eventcal">
         <title>Login Page</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
+        <link rel="stylesheet" href="stylesheets/add_event.css">
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
 
         <!--for google authentication-->
@@ -54,7 +55,7 @@
                         </div>
 
                         <div class="login">
-                            <button id="submit-button" type="submit" onclick="login()">LOGIN</button>
+                            <button id="submit-button" type="submit" onclick="login()">Login</button>
                         </div>
                         <div class="NoAccount">
                             Don't have an account? <a href="signUpPage.html">SIGN UP!</a>
