Wed, Jun 8, 2022, 1:22 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -8,7 +8,7 @@
         <meta name="google-signin-plugin_name" content="eventcal">
         <title>Login Page</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
-        <link rel="stylesheet" href="stylesheets/add_event.css">
+        <!-- <link rel="stylesheet" href="stylesheets/add_event.css"> -->
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
 
         <!--for google authentication-->
@@ -21,7 +21,7 @@
 
         <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
 
-        <h1 class="LoginToCont"><strong>LOGIN TO CONTINUE</strong></h1>
+        <h1 class="LoginToCont">Log in to continue</h1>
 
         <div class="LoginRectSection">
             <span class="socMed">SIGN IN:</span><span class="arrow1"> &#x2193;</span>
