Wed, Jun 8, 2022, 1:23 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -21,7 +21,7 @@
 
         <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
 
-        <h1 class="LoginToCont">Log in to continue</h1>
+        <h1>Log in to continue</h1>
 
         <div class="LoginRectSection">
             <span class="socMed">SIGN IN:</span><span class="arrow1"> &#x2193;</span>
