Wed, Jun 8, 2022, 1:25 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -53,9 +53,10 @@
                         <div id="passwordInput" class="inputs">
                             <input id="name1" type="password" placeholder="Password" required>
                         </div>
+                        <br>
 
                         <div class="login">
-                            <button id="submit-button" type="submit" onclick="login()">Login</button>
+                            <button id="login-button" type="submit" onclick="login()">Login</button>
                         </div>
                         <div class="NoAccount">
                             Don't have an account? <a href="signUpPage.html">SIGN UP!</a>
