--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -9,6 +9,7 @@
         <title>Login Page</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
         <link rel="stylesheet" href="stylesheets/add_event.css">
+
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
 
         <!--for google authentication-->
@@ -18,13 +19,43 @@
     </head>
 
     <body>
+<!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
+<header>
 
+    <!--Logo/website name-->
+    <div>
         <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
+    </div>
+
+    <!--container for links to Home and Profile settings-->
+    <div class="top-right-menu">
+        <div class="menu-div">
+            <a href="#user-dashboard" class="link-black menu-btn">Home</a>
+        </div>
+        <div class="settings-dropdown">
+            <button type="button" class="blue-btn">Profile
+                <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
+            </button>
+
+            <!-- settings to be shown from dropdown menu -->
+            <div class="settings">
+                <a href="user-account.html" class="link-black">Account Settings</a>
+                <a href="email-settings.html" class="link-black">Email Settings</a>
+            </div>
+
+        </div>
+    </div>
+
+</header>
+<hr />
+
+        <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
 
         <h1>Log in to continue</h1>
 
         <div class="LoginRectSection">
-            <span class="socMed">SIGN IN:</span><span class="arrow1"> &#x2193;</span>
+            <!-- <span class="socMed">SIGN IN:</span> -->
+            <!-- <span class="arrow1"> &#x2193;</span> -->
                 <!-- <form action="/example"> -->
                     <div class="socialMedia">
                         <div>
