--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -9,6 +9,9 @@
         <title>Login Page</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
         <link rel="stylesheet" href="stylesheets/add_event.css">
+        <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
+        <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
+        <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
 
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
 
