Wed, Jun 8, 2022, 1:57 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -93,7 +93,7 @@
                             <button id="login-button" type="submit" onclick="login()">Login</button>
                         </div>
                         <div class="NoAccount">
-                            Don't have an account? <a href="signUpPage.html">SIGN UP!</a>
+                            Don't have an account? <a href="signUpPage.html">Sign up here!</a>
                         </div>
                     </div>
                 <!-- </form> -->
