--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -54,50 +54,50 @@
 
         <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
 
+
+<div id="content-div class="LoginRectSection">
         <h1>Log in to continue</h1>
-
-        <div class="LoginRectSection">
-            <!-- <span class="socMed">SIGN IN:</span> -->
-            <!-- <span class="arrow1"> &#x2193;</span> -->
-                <!-- <form action="/example"> -->
-                    <div class="socialMedia">
-                        <div>
-                            <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50"></div>
-                            <!-- onSignIn gives user info -->
-                            <!-- <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn"> -->
-                            <!-- <i class="fa-brands fa-google"></i> Login With Google -->
-                            <!-- </a> -->
-                        </div>
-                        <!-- <div>
-                            <a href='https://www.facebook.com/login.php/' class="fb btn">
-                            <i class="fa-brands fa-facebook-f"></i>
-                            </a>
-                        </div>
-                        <div>
-                            <a href='https://twitter.com/i/flow/login' class="tw btn">
-                            <i class="fa-brands fa-twitter"></i>
-                            </a>
-                        </div> -->
-
-                    <div class="UserDetails">
-                        <span class="or">OR:</span>
-                        <div id="emailInput" class="inputs">
-                            <input id="name" type="text" placeholder="Email" required>
-                        </div>
-                        <div id="passwordInput" class="inputs">
-                            <input id="name1" type="password" placeholder="Password" required>
-                        </div>
-                        <br>
-
-                        <div class="login">
-                            <button id="login-button" type="submit" onclick="login()">Login</button>
-                        </div>
-                        <div class="NoAccount">
-                            Don't have an account? <a href="signUpPage.html">Sign up here!</a>
-                        </div>
+<!-- <span class="socMed">SIGN IN:</span> -->
+        <!-- <span class="arrow1"> &#x2193;</span> -->
+            <!-- <form action="/example"> -->
+                <div class="socialMedia">
+                    <div>
+                        <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50"></div>
+                        <!-- onSignIn gives user info -->
+                        <!-- <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn"> -->
+                        <!-- <i class="fa-brands fa-google"></i> Login With Google -->
+                        <!-- </a> -->
                     </div>
-                <!-- </form> -->
-        </div>
+                    <!-- <div>
+                        <a href='https://www.facebook.com/login.php/' class="fb btn">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </div>
+                    <div>
+                        <a href='https://twitter.com/i/flow/login' class="tw btn">
+                        <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </div> -->
+
+                <div class="UserDetails">
+                    <span class="or">OR:</span>
+                    <div id="emailInput" class="inputs">
+                        <input id="name" type="text" placeholder="Email" required>
+                    </div>
+                    <div id="passwordInput" class="inputs">
+                        <input id="name1" type="password" placeholder="Password" required>
+                    </div>
+                    <br>
+
+                    <div class="login">
+                        <button id="login-button" type="submit" onclick="login()">Login</button>
+                    </div>
+                    <div class="NoAccount">
+                        Don't have an account? <a href="signUpPage.html">Sign up here!</a>
+                    </div>
+                </div>
+            <!-- </form> -->
+    </div>
     </body>
 
 </html>
