--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -95,12 +95,12 @@
             <div id="events">
                 <div class="event">
                     <div class="dateTime">
-                        <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
-                        <p class="time"><i class="fa-solid fa-clock"></i> 5:13pm </p>
+                        <p class="date"><i class="fa-solid fa-calendar"></i> .../... </p>
+                        <p class="time"><i class="fa-solid fa-clock"></i> .... </p>
                     </div>
                     <div class="nameLocale">
-                        <h3 class="eventName"><a href="Dashboard.html"> Tennis Squad </a></h3>
-                        <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> Adelaide, Australia </p>
+                        <h3 class="eventName"><a href="Dashboard.html"> ... </a></h3>
+                        <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> ..., ... </p>
                     </div>
                 </div>
             </div>
