--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -56,14 +56,14 @@
 <div class="LoginRectSection">
          <h1>Log in to continue</h1>
     <div class="socialMedia">
-        <div>
+        <div id="google">
             <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
         </div>
             <!-- onSignIn gives user info -->
             <!-- <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn"> -->
             <!-- <i class="fa-brands fa-google"></i> Login With Google -->
             <!-- </a> -->
-        </div>
+    </div>
         <!-- <div>
             <a href='https://www.facebook.com/login.php/' class="fb btn">
             <i class="fa-brands fa-facebook-f"></i>
