--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -14,7 +14,7 @@
     <body>
         <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
 
-        <h1 class="signUp"><strong>SIGN UP TO CREATE AN ACCOUNT!</strong></h1>
+        <h1 class="signUp">Sign up to create an account</h1>
 
         <div class="rectangles">
             <div class="sections">
